# myrargb

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  SESSIONS.md  TODOS.md  app.py  crawl_imdb.py  crawl_rargb.py  crawler.py  db.py  docker-compose.yml  entrypoint.sh  env.yml  finetuning.py  handler.py  main.py  myrargb.db  myrargb.sql  pyproject.toml  readme.md  requirements.txt  selenium_conf.py  send_msg_to_kafka.sh  workflow.py
browserdriver/: driver.py
crawler/: crawl_imdb.py  crawl_rargb.py
db/: db.py  repository.py  service.py
db_model/: __init__.py
docker/: Dockerfile  DockerfileV1
model/: finetuning.py  model.py
static/css/: style.css
templates/: index.html
utils/: bloom_utils.py  kafka_utils.py  pager_utils.py
