[project]
name = "myrargb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate==1.12.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiosignal==1.4.0",
    "anyio==4.12.1",
    "async-generator==1.10",
    "attrs==25.4.0",
    "beautifulsoup4==4.14.3",
    "blinker==1.9.0",
    "bs4==0.0.2",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "colorama==0.4.6",
    "datasets==4.5.0",
    "dill==0.4.0",
    "filelock==3.20.3",
    "flask==3.1.2",
    "flask-cors==6.0.2",
    "frozenlist==1.8.0",
    "fsspec==2025.10.0",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.36.0",
    "idna==3.11",
    "importlib-metadata==8.7.1",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "mpmath==1.3.0",
    "multidict==6.7.0",
    "multiprocess==0.70.18",
    "mypy-extensions==1.1.0",
    "networkx==3.6.1",
    "numpy==2.4.1",
    "outcome==1.3.0.post0",
    "packaging==25.0",
    "pandas==2.3.3",
    "pillow==12.0.0",
    "propcache==0.4.1",
    "psutil==7.2.1",
    "pyarrow==23.0.0",
    "pycparser==2.23",
    "pysocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "regex==2026.1.15",
    "requests==2.32.5",
    "safetensors==0.7.0",
    "selenium==4.40.0",
    "setuptools==70.2.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.8.2",
    "sympy==1.14.0",
    "tokenizers==0.22.2",
    "torch>=2.10.0",
    "tqdm==4.67.1",
    "transformers==4.57.6",
    "trio==0.32.0",
    "trio-typing==0.10.0",
    "trio-websocket==0.12.2",
    "typer-slim==0.21.1",
    "types-certifi==2021.10.8.3",
    "types-urllib3==1.26.25.14",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "urllib3==2.6.3",
    "webdriver-manager==4.0.2",
    "websocket-client==1.9.0",
    "werkzeug==3.1.5",
    "wsproto==1.3.2",
    "xxhash==3.6.0",
    "yarl==1.22.0",
    "zipp==3.23.0",
]

[[tool.uv.index]]
name = "torch"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

